force-app/main/default/objects/Application_Tables__c/fields/Will_project_require_replotting__c.field-meta.xml
<CustomField>
    <fullName>Will_project_require_replotting__c</fullName>
    <label>Will project require replotting?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>