force-app/main/default/objects/Application_Tables__c/fields/Year_s_Awarded__c.field-meta.xml
<CustomField>
    <fullName>Year_s_Awarded__c</fullName>
    <inlineHelpText>Year or years awarded grant.  Upto 65 characters.</inlineHelpText>
    <label>Year(s) Awarded</label>
    <length>65</length>
    <type>Text</type>
</CustomField>