force-app/main/default/objects/Application_Tables__c/fields/Years_Managed__c.field-meta.xml
<CustomField>
    <fullName>Years_Managed__c</fullName>
    <label>Years Managed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>