force-app/main/default/objects/Application_Tables__c/recordTypes/Activities.recordType-meta.xml
<RecordType>
    <fullName>Activities</fullName>
    <active>true</active>
    <label>Activities</label>
</RecordType>