force-app/main/default/objects/Application_Tables__c/recordTypes/Addresses_and_Location_of_Proposed_Activity.recordType-meta.xml
<RecordType>
    <fullName>Addresses_and_Location_of_Proposed_Activity</fullName>
    <active>true</active>
    <description>Used on CDBG application</description>
    <label>Addresses and Location of Proposed Activity</label>
</RecordType>