force-app/main/default/objects/Application_Tables__c/recordTypes/Board_Members.recordType-meta.xml
<RecordType>
    <fullName>Board_Members</fullName>
    <active>true</active>
    <label>Board Members</label>
</RecordType>