force-app/main/default/objects/Application_Tables__c/recordTypes/Development_Schedule.recordType-meta.xml
<RecordType>
    <fullName>Development_Schedule</fullName>
    <active>true</active>
    <description>To store development schedule of the project</description>
    <label>Development Schedule</label>
</RecordType>