force-app/main/default/objects/Application_Tables__c/recordTypes/Development_Team.recordType-meta.xml
<RecordType>
    <fullName>Development_Team</fullName>
    <active>true</active>
    <label>Development Team</label>
</RecordType>