force-app/main/default/objects/Application_Tables__c/recordTypes/Funding_Sources.recordType-meta.xml
<RecordType>
    <fullName>Funding_Sources</fullName>
    <active>true</active>
    <description>Application funding sources</description>
    <label>Funding Sources</label>
</RecordType>