force-app/main/default/objects/Application_Tables__c/recordTypes/General_Partner.recordType-meta.xml
<RecordType>
    <fullName>General_Partner</fullName>
    <active>true</active>
    <label>General Partner</label>
</RecordType>