force-app/main/default/objects/Application_Tables__c/recordTypes/Grant_Experience.recordType-meta.xml
<RecordType>
    <fullName>Grant_Experience</fullName>
    <active>true</active>
    <label>Grant Experience</label>
</RecordType>