force-app/main/default/objects/Application_Tables__c/recordTypes/Home_ARP_Activities.recordType-meta.xml
<RecordType>
    <fullName>Home_ARP_Activities</fullName>
    <active>true</active>
    <label>Home-ARP Activities</label>
</RecordType>