force-app/main/default/objects/Application_Tables__c/recordTypes/Home_Pricing_and_Market_Assessment.recordType-meta.xml
<RecordType>
    <fullName>Home_Pricing_and_Market_Assessment</fullName>
    <active>true</active>
    <label>Home Pricing and Market Assessment</label>
</RecordType>