force-app/main/default/objects/Application_Tables__c/recordTypes/Management_Functions.recordType-meta.xml
<RecordType>
    <fullName>Management_Functions</fullName>
    <active>true</active>
    <description>Fields to collect management functions on application</description>
    <label>Management Functions</label>
</RecordType>