force-app/main/default/objects/Application_Tables__c/recordTypes/output_and_criteria.recordType-meta.xml
<RecordType>
    <fullName>output_and_criteria</fullName>
    <active>true</active>
    <description>used on supportive services application</description>
    <label>output and criteria</label>
</RecordType>