force-app/main/default/objects/Application_Tables__c/recordTypes/Property_Information_Table_Tornado_Recovery.recordType-meta.xml
<RecordType>
    <fullName>Property_Information_Table_Tornado_Recovery</fullName>
    <active>true</active>
    <description>Used on Tornado Recovery Vacant Unit Turns Application</description>
    <label>Property Information Table Tornado Recovery</label>
</RecordType>