force-app/main/default/objects/Application_Tables__c/recordTypes/Property_Management_Track_Record_Table.recordType-meta.xml
<RecordType>
    <fullName>Property_Management_Track_Record_Table</fullName>
    <active>true</active>
    <label>Property Management Track Record Table</label>
</RecordType>