force-app/main/default/objects/Application_Tables__c/recordTypes/Proposed_Actions.recordType-meta.xml
<RecordType>
    <fullName>Proposed_Actions</fullName>
    <active>true</active>
    <description>Proposed actions and activities</description>
    <label>Proposed Actions</label>
</RecordType>