force-app/main/default/objects/Application_Tables__c/recordTypes/Proposed_Output.recordType-meta.xml
<RecordType>
    <fullName>Proposed_Output</fullName>
    <active>true</active>
    <label>Proposed Output</label>
</RecordType>