force-app/main/default/objects/Application_Tables__c/recordTypes/Proposed_Project.recordType-meta.xml
<RecordType>
    <fullName>Proposed_Project</fullName>
    <active>true</active>
    <description>New application section in NOFA Housing applications</description>
    <label>Proposed Project</label>
</RecordType>