force-app/main/default/objects/Application_Tables__c/recordTypes/Proposed_Project_PRO_Housing.recordType-meta.xml
<RecordType>
    <fullName>Proposed_Project_PRO_Housing</fullName>
    <active>true</active>
    <description>Created for PRO Housing Applications</description>
    <label>Proposed Project PRO Housing</label>
</RecordType>