force-app/main/default/objects/Application_Tables__c/recordTypes/Proposed_Project_Tornado_Recovery.recordType-meta.xml
<RecordType>
    <fullName>Proposed_Project_Tornado_Recovery</fullName>
    <active>true</active>
    <description>Used on Tornado Recovery Vacant Unit Turns Application</description>
    <label>Proposed Project Tornado Recovery</label>
</RecordType>