force-app/main/default/objects/Application_Tables__c/recordTypes/Recent_Projects.recordType-meta.xml
<RecordType>
    <fullName>Recent_Projects</fullName>
    <active>true</active>
    <label>Recent Projects</label>
</RecordType>