force-app/main/default/objects/Application_Tables__c/recordTypes/Team_Organizations.recordType-meta.xml
<RecordType>
    <fullName>Team_Organizations</fullName>
    <active>true</active>
    <label>Team Organizations</label>
</RecordType>