force-app/main/default/objects/Application_Tables__c/recordTypes/Track_Record.recordType-meta.xml
<RecordType>
    <fullName>Track_Record</fullName>
    <active>true</active>
    <label>Track Record</label>
</RecordType>